--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
     "debug": "set DEBUG=express:* & nodemon server.js"
   },
   "keywords": [],
-  "author": "MP",
+  "author": "MonicaVazquez",
   "license": "ISC",
   "dependencies": {
     "@faker-js/faker": "^7.6.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
-    "mongoose": "^6.6.5",
+    "mongoose": "^6.7.0",
     "slugify": "^1.6.5"
   },
   "devDependencies": {
