--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
+    "method-override": "^3.0.0",
     "mongoose": "^6.7.0",
     "slugify": "^1.6.5"
   },
